--- a/src/styles/TimerDisplay.css
+++ b/src/styles/TimerDisplay.css
@@ -1,7 +1,7 @@
 
 .timer-container {
-  width: 600px; /* Large container */
-  height: 500px; /* Adjust height as needed */
+  width: 600px;
+  height: 500px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -14,7 +14,9 @@
   border-radius: 10px;
 }
 .timer-wrapper {
-  width: 300px; 
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto;
   height: 300px;
 }
 .buttons{
